@@ -8,6 +8,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-04-06-0: Bugfix:      dbwriter statistics thread throws error
+                 Issue:       AR-4
+                 Review:      SH
+
 JG-2011-03-29-0: Cleanup:     minor code cleanup and fix to compiling the JUnit
                               tests.
 
